# kuka_omnirob_iisy_vgc10_control

./: README.md
iisy_arm_controller/: CMakeLists.txt  package.xml
iisy_arm_controller/src/: iisy_arm_controller.cpp
koi_controller/: CMakeLists.txt  package.xml
koi_controller/include/koi_controller/: koi_pick_place_controller.hpp  omnirob_controller.hpp
koi_controller/launch/: koi_controller.launch.py  koi_pick_place_controller.launch.py
koi_controller/src/: iisy_arm_controller.cpp  koi_controller.cpp  koi_pick_place_controller.cpp  koi_pick_place_stages.cpp  koi_pick_place_task.cpp  moveit_pick_place_example.cpp  omnirob_controller.cpp
omnirob_controller/: CMakeLists.txt  package.xml
omnirob_controller/include/: omnirob_controller.hpp
omnirob_controller/src/: omnirob_controller.cpp
